@@ -26,6 +26,9 @@ contributing to this release.
 
 - Fix bug #3671: autodetect text file encoding in HelpViewer
   (patch #540 - Eric Le Lay)
+  
+- Fix bug #3881, non-capturing lookahead in regex search didn't work.
+  (Dale Anson)
 
 }}}
 {{{ UI Improvements
